@@ -4,6 +4,8 @@ Changes
 Next
 ----
 
+- CRS objects are now hashable and equivalent CRS objects have the same hash
+  value (#1684).
 - Allow AWS regions to be specified no matter the signing of requests (#1670).
 - Add links to API documentation from the Python quickstart guide.
 - Use "CRS.from_epsg({})" instead of "CRS.from_dict(init='epsg:{}')" as the
@@ -21,7 +23,8 @@ Next
 1.0.21 (2019-02-28)
 -------------------
 
-- Fix for bug in implementation of the pickle protocol (#1643).
+- Fix for bug in implementation of the pickle protocol and added support for
+  Python's copy protocol (#1643).
 
 1.0.20 (2019-02-27)
 -------------------
